--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,16 @@ img{
 table, th, td {
     border: 1px solid #000000;
   }
+
+  .button {
+    background-color: #aa2804;
+    border: none;
+    color: white;
+    padding: 12px 25px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
